# vixen

./: .gitignore  CMakeLists.txt  LICENSE  UpgradeLog.htm  Vixen.sln  Vixen2012.sln  VixenDX.sln
apps/BodyTrack/: BodyTrack.rc  bodytrack.cpp  stdafx.h
apps/ConsoleTest/: geotest.cpp
apps/GeoTest/: CMakeLists.txt  Viewer.rc  geotest.cpp
apps/GeoTest/vs2010/: GeoTestDX9.vcxproj  GeoTestDX9.vcxproj.filters  GeoTestGL.vcxproj
apps/GeoTest/vs2012/: GeoTestBKY.vcxproj  GeoTestEMS.vcxproj  GeoTestEMS.vcxproj.filters  GeoTestGL.vcxproj  GeoTestGL.vcxproj.filters  GeoTestGLES2.vcxproj  GeoTestGLES2.vcxproj.filters  GeoTextDX11.vcxproj  GeoTextDX9.vcxproj  shell.html
apps/GeoTest/vs2012/shaders/glsl2/: default_vertex_shader.glsl  directlight.glsl  pixelphongspecular.frag  vertexpos.vert  vertexposnorm.vert  vertexposnormtex.vert  vertexposnormtextang.vert  vertexpostex.vert
apps/GeoTest/vs2017/: GeoTestDX11.sln  GeoTestDX11.vcxproj  GeoTestGL.sln  GeoTestGL.vcxproj  GeoTestGLES2.vcxproj  GeoTextDX11.sln  GeoTextDX11.vcxproj  GeoTextDX9.vcxproj  GeoTextDX9.vcxproj.filters
apps/GeoTestCS/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
apps/MFCViewer/: Viewer.aps  default.loc  resource.h  viewer.cpp
apps/MagicMirror/: App.xaml  App.xaml.cs  AvatarCanvas.cs  AvatarInterface.cs  AvatarScene.cs  BVHLoader.cs  DSFLoader.cs  Garment.cs  KinectAvatarScene.cs  MagicMirror.csproj  MagicMirror.snk  PZ2Loader.cs  Puppet.cs  Selector.cs
apps/MayaIO/: MayaCacheFile.cs  MayaIO.csproj  MayaIO.sln  mayaio.snk
apps/ObjIO/: ObjIO.csproj
apps/StereoView/: Resource.h  StereoView.cpp  StereoView.rc  StereoView.sln  StereoView.vcxproj  StereoView.vcxproj.filters  stdafx.cpp
apps/wxViewer/: Makefile  (+1 more)
data/: GalahadProfile.pprof  KinectConfig.xml  NolaHavokProxies.hkt  ShaderCompilerErrors.txt  _PixelPhongDiffuse.frag  _PixelPhongNotex.frag  cube.ma  cube.vix  default.loc  default_pixel_shader.hlsl  default_vertex_shader.hlsl  dirlight_test.vix  dress.mtl  dress.vix  havokproxies.vix  ikjane.vix  modml.xsl  octo.ma  octo.vix  pinetree.vix  skeleton.vix  sphericalharmoniclight.hlsl  spotlight_red.vix  spotlight_test.vix  spotlight_test2.vix  test.vix  texcube.ma  texcube.vix  toy_octo_color.tga  tree3.vix
inc/: vixen.h  vxface.h  vxlite_export.h  vxmedia.h  vxmfc.h  vxutil.h  vxwxwin.h
lib/: vixenmfc32d.lib  vixenmfc64d.lib
src/: CMakeLists.txt  activexvixen_i.c  activexvixen_i.h  vixen_header.cpp  vixen_lite.cpp
src/base/: Obj.cpp  array.cpp  bitmap.cpp  box.cpp  bufmess.cpp  event.cpp  fileio.cpp  freeimageio.cpp  group.cpp  imageio.cpp  imagejpg.cpp  imagepng.cpp  loadq.cpp  matrix.cpp  messenger.cpp  quat.cpp  sphere.cpp  synchronizer.cpp  world.cpp
src/body/: bodytrack.cpp
src/body/oni2/: KinectTrack.cpp  KinectTrack2.cpp  OpenNI1Tracker.cpp  bodytrack.cpp
src/body/save/: KinectTrack.cpp  bodytrack.cpp
src/dx11/: appdx.cpp  dxref.cpp  imagedx.cpp  initdx.cpp  lightdx.cpp  meshdx.cpp  renderdx.cpp  shaderdx.cpp  vbufdx.cpp  vixendx11.cpp
src/dx9/: Matdx.cpp  appdx.cpp  camdx.cpp  dxref.cpp  imagedx.cpp  initdx.cpp  lightdx.cpp  meshdx.cpp  renderdx.cpp  scenedx.cpp  vbufdx.cpp
src/linux/: scene-x.cpp  scenegl_x.cpp  world3d_x.cpp
src/media/: MediaBase.cpp  MediaCV.cpp  MediaFFM.cpp  MediaIPP.cpp  SoundFM.cpp  VideoImageBase.cpp  VideoImageCV.cpp  VideoImageIPP.cpp  mediaDX.cpp
src/media/mci/: MediaMCI.cpp  SoundMCI.cpp
src/media/mpl/: VideoImageMPL.cpp  VideoImageWMF.cpp
src/media/old/: SoundBase.cpp  SoundDX8.cpp  VideoImageDX.cpp  speech.cpp
src/media/openal/: LoadOAL.cpp  SoundDataOAL.cpp  aldlist.cpp  soundOAL.cpp
src/media/save/: VideoImageDX.cpp  VideoImageWMF.cpp
src/mfc/: CameraDlg.cpp  EnvironDlg.cpp  LocationSaver.cpp  ProgDlg.cpp  StdAfx.cpp  TreeDlg.cpp  Utility.cpp  VixenMFC.rc  afresource.clw  afresource.rc  demoview.cpp  framectr.cpp  mfcapp.cpp  mfcdoc.cpp  mfcframe.cpp  mfcview.cpp  resource.h
src/ogl/: appgl.cpp  contextgl.cpp  contextgles2.cpp  contextglfw.cpp  gentexfont.c  gltexfont.cpp  imagegl.cpp  imagegles2.cpp  imageglfw.cpp  lightgl.cpp  meshgl.cpp  ocull.cpp  rendergl.cpp  shadergl.cpp  vbufgl.cpp  world3d-glfw.cpp
src/physics/havok/: cloth.cpp  clothsetup.cpp  havokloader.cpp  physics.cpp  ragdoll.cpp
src/render/: appearance.cpp  devbuf.cpp  fog.cpp  geodraw.cpp  geomesh.cpp  geonorm.cpp  geosort.cpp  geoutil.cpp  image.cpp  imageswitch.cpp  loadfont.cpp  material.cpp  norender.cpp  sampler.cpp  shader.cpp  textgeom.cpp  trimesh.cpp  vtxaos.cpp  vtxcache.cpp  vtxpool.cpp
src/render/save/: imageio.cpp  imagejpg.cpp  imagepng.cpp  sceneopt.cpp  texspace.cpp  vtxanim.cpp
src/scene/: bb.cpp  cam.cpp  distscene.cpp  extmodel.cpp  light.cpp  lod.cpp  model.cpp  octree.cpp  portal.cpp  room.cpp  roomgroup.cpp  scene-stub.cpp  scene.cpp  scenethread.cpp  shape.cpp  simpleshape.cpp  sprite.cpp  switch.cpp  wall.cpp  world-stub.cpp  world3d.cpp
src/sim/: animator.cpp  boneanim.cpp  bvhloader.cpp  computethread.cpp  computethread.h  deformer.cpp  engine.cpp  interpolator.cpp  keyframe.cpp  meshanim.cpp  morph.cpp  parser.cpp  pose.cpp  posemapper.cpp  scriptor.cpp  sequencer.cpp  skeleton.cpp  skin.cpp  switcher.cpp  texswitcher.cpp  trigger.cpp  xformer.cpp
src/util/: RayPicker.cpp  SkyDome.cpp  Trackball.cpp  VCursor.cpp  arcball.cpp  flyer.cpp  framestats.cpp  navigator.cpp  quadtree.cpp  terrain.cpp  terrcoll.cpp
src/vcore/: pipeline.cpp  pipeobjs.cpp  valloc _align.cpp  valloc.cpp  vbufq.cpp  vcore_header.cpp  vfile.cpp  vobj.cpp  vsocket.cpp  vstream.cpp  vstring.cpp  vstringpool.cpp  vthread-pt.cpp  vthread.cpp  vtlsdata-pt.cpp  vtree.cpp
src/vcore/ems/: vcore-ems.cpp  vstream-ems.cpp
src/vcore/linux/: valloc-x.cpp  vcore-x.cpp  vdbg-x.cpp  vlock-x.cpp  vstring-x.cpp
src/vcore/win32/: valloc-win.cpp  vcore-win.cpp  vdbg-win.cpp  vfile-win.cpp  vlock-win.cpp  vstring-win.cpp  vthread-win.cpp  vtlsdata-win.cpp
src/win32/: imagedds.cpp  joystick.cpp  midi.cpp  rawdll.cpp  scene-win.cpp  script-win.cpp  world-win.cpp  world3d-win.cpp
src/wxwin/: SceneGraphDlg.cpp  wxapp.cpp  wxframe.cpp  wxview.cpp
(+629 files in other folders)
